--- a/style.css
+++ b/style.css
@@ -9,3 +9,11 @@
 body{
     background-color: var(--fundo);
 }
+
+
+footer{
+    position: absolute;
+    bottom: 0;
+    background-color: var(--preto);
+    color: var(--branco);
+}
