--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 }
 body{
     background-color: var(--fundo);
+    margin: 0;
 }
 
 
@@ -16,4 +17,6 @@ footer{
     bottom: 0;
     background-color: var(--preto);
     color: var(--branco);
+    width: 100%;
+    text-align: center;
 }
