--- a/style.css
+++ b/style.css
@@ -31,4 +31,23 @@ footer{
 .cartao{
     flex-grow: 1;
     flex-basis: calc(33% - 6rem);
+    height: 20rem;
+    margin: 1rem;
+}
+
+.conteudo-cartao{
+    background-color: var(--cor-frente);
+    height: 100%;
+    color: var(--branco);
+    text-align: center;
+}
+
+.conteudo-cartao h3{
+    position: absolute;
+    border: 1px solid var(--destaque);
+    color: var(--destaque);
+    margin: 0.6rem;
+    padding: 0.6rem;
+    font-size: 1.2vw;
+    border-radius: 0.6rem;
 }
