--- a/style.css
+++ b/style.css
@@ -51,3 +51,9 @@ footer{
     font-size: 1.2vw;
     border-radius: 0.6rem;
 }
+
+.conteudo-cartao p{
+    margin-top: 4rem;
+    padding: 2rem;
+    font-size: 1.4vw;
+}
