--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root{
-    --fundo: #87CEFA;
+    --fundo: #135a86;
     --cor-frente:#4169E1;
     --cor-verso: #000000;
     --destaque: #00FFFF;
