--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     --fundo: #70c4f8;
     --cor-frente:#4169E1;
     --cor-verso: #000000;
-    --destaque: #2507ad;
+    --destaque: #0e83c7;
     --preto: #000000;
     --branco: #ffffff;
 }
