--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ footer{
 }
 
 .cartao:hover .conteudo-cartao{
-    transform: rotateX(180deg);
+    transform: rotateY(180deg);
 }
 
 .pergunta-cartao, .resposta-cartao{
