--- a/ll.css
+++ b/ll.css
@@ -31,3 +31,20 @@ footer{
     width: 100%;
     text-align: center;
 }
+
+#container{
+    padding: 3rem;
+    display: grid;
+    gap: 4rem;
+}
+
+.cartao{
+    background-color: var(--cor-frente);
+    color: var(--branco);
+    padding: 40px;
+    box-shadow: 5px 5px 5px var(--preto);
+}
+
+.cartao:hover{
+    transform: scale(1.04);
+}
