--- a/pagina2.css
+++ b/pagina2.css
@@ -48,3 +48,9 @@ footer{
 .cartao:hover{
     transform: scale(1.04);
 }
+
+.resposta-cartao{
+    background-color: var(--cor-verso);
+    padding: 40px;
+    display: none;
+}
