--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ header a {
 }
 
 footer{
-    position: absolute;
+    position:fixed;
     bottom: 0;
     background-color: var(--preto);
     color: var(--branco);
